<resources>
    <string name="app_name">KURC</string>

    <string name="title_activity_main">Home</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_login">KURC Login</string>

    <string name="message_welcome">Kathmandu University Robotics Club</string>
    <string name="message_tagline">Machines rule the world, We rule the machines.</string>
    <string name="message_login_prompt">Scan your KURC Card\'s QR Code to get in.</string>

    <string name="btn_text_open_scanner">Open Scanner</string>
    <string name="btn_text_flash_on">Turn On Flash</string>
    <string name="btn_text_flash_off">Turn off flash</string>
    <string name="btn_text_login_as_guest">Nope! I don\'t have a KURC Card.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_events">News and Events</string>
    <string name="nav_notice">Notice and Announcements</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_committee">Committee</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Send Feedback</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_developer">About Developer(s)</string>
    <string name="nav_logout">Log out</string>

    <string name="placeholder_member_info">Member Info</string>
    <string name="placeholder_member_name">Member Name</string>

    <string name="placeholder_email">amrit.cas@gmail.com</string>
    <string name="placeholder_post_title">Post Title</string>
    <string name="placeholder_post_date">14 Hours Ago</string>
    <string name="placeholder_post_author">Amrit Twanabasu</string>
    <string name="placeholder_large_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut libero nulla, sagittis et placerat non, porta et erat. Duis scelerisque vehicula nisi vitae egestas. Maecenas ultricies, velit et feugiat vestibulum, mi neque placerat leo, ut gravida odio eros eu est. Donec condimentum pulvinar magna ut sollicitudin. Proin est leo, consectetur at congue non, interdum viverra eros. Curabitur tempor consequat congue. Phasellus arcu risus, tempor at scelerisque rutrum, accumsan a enim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur ac rutrum nunc. In id urna eu massa auctor vestibulum vel et sem. Morbi mattis pretium semper. Cras vel sem malesuada, dictum risus sollicitudin, imperdiet massa. Phasellus viverra tortor scelerisque nunc fermentum, sed accumsan dolor dignissim. Etiam est nibh, consequat in lacus a, malesuada vehicula turpis. Morbi et consequat justo. Quisque dignissim egestas nisl nec iaculis. Curabitur laoreet maximus nisi, sed imperdiet turpis elementum tincidunt. Donec mattis purus in erat porttitor, ultricies consectetur lacus congue. Phasellus sed nisi ut velit egestas egestas. Duis luctus, sapien vel facilisis eleifend, elit nunc pellentesque lorem, eu faucibus nunc tellus nec risus. Cras quis augue sollicitudin, rhoncus est quis, accumsan ex. Quisque sollicitudin, libero sit amet condimentum aliquet, ex eros egestas nisl, nec tincidunt nunc mi gravida augue. Vivamus egestas sed libero non fringilla. Quisque a convallis diam. Aliquam vel tortor in lacus dictum tempor eget non quam. Quisque non consequat enim, quis viverra mi. Proin fringilla ipsum sit amet orci scelerisque tristique ut non sem. Etiam in lobortis magna. Suspendisse euismod enim elit, non lobortis mauris malesuada pharetra. Ut ultricies eleifend lectus, at facilisis arcu volutpat tincidunt. Donec volutpat lacus ex, in semper metus mollis convallis. Praesent sit amet sem feugiat, pulvinar augue et, pharetra magna. Mauris vitae pulvinar est. Nullam eget elit sapien. Sed ornare mauris scelerisque, suscipit est eget, convallis turpis. Nullam suscipit sem lorem, quis sodales turpis gravida et. Cras scelerisque aliquet purus non elementum. Curabitur nulla eros, eleifend at nisi non, eleifend aliquam dui. Integer non nunc molestie, blandit tellus eget, semper nisi. Nunc mi libero, faucibus eget felis a, efficitur tempor eros. Nulla gravida lacus tellus, sed faucibus ante laoreet non. Mauris aliquet arcu urna, ut varius sapien hendrerit sit amet. Donec lobortis, leo id posuere pretium, sem elit euismod nibh, sit amet tincidunt risus ipsum id dolor. Integer vulputate tempor nibh id vulputate. Praesent egestas in orci vel rutrum. Aliquam sed posuere ex. Quisque non sapien tincidunt, vestibulum neque et, efficitur enim. Duis tincidunt convallis elit, nec convallis erat lobortis et. Curabitur porta lobortis lacus, vitae ullamcorper velit accumsan sed. Curabitur ut accumsan purus, non tristique purus. Nunc sit amet urna consectetur, pellentesque nisl nec, posuere tortor. Suspendisse pellentesque tellus nisl, vel dictum nisi porta eu. Nunc ex erat, luctus in libero et, commodo pretium dui. Aliquam eu magna a turpis volutpat fermentum. Etiam cursus, tellus in placerat tincidunt, lectus neque porttitor leo, nec cursus diam justo quis mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent non odio at justo ornare varius quis id ligula. Aenean eget ante dapibus, ornare tellus eu, egestas mi. Morbi ligula odio, congue ac dolor vitae, placerat auctor massa. Praesent sed maximus massa, id scelerisque ligula. Nunc tempus ipsum eu congue molestie. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque at mollis lorem. Suspendisse potenti. Aliquam vel arcu sit amet nisi iaculis suscipit a nec mauris. Proin euismod congue lorem quis dictum. Morbi vel varius felis, sed sagittis sem. Maecenas eros quam, lobortis tristique bibendum ac, luctus vel ante. Donec nec dolor in nibh blandit bibendum. Cras sit amet diam eget nibh interdum rhoncus et quis sem. Nulla in blandit dui. Donec quis velit vel massa cursus feugiat. Etiam non velit aliquet felis tempor iaculis. Praesent vel porttitor nulla. Nulla facilisi. Morbi hendrerit, ligula sed bibendum dignissim, ex neque commodo diam, at egestas mauris quam id velit. Aliquam ut magna dapibus, tristique urna ac, tincidunt libero. Praesent bibendum sed tortor eget maximus. Donec volutpat a justo sit amet auctor. Phasellus rhoncus volutpat nisl ullamcorper volutpat. Nam a ligula quis urna pretium tempus. Pellentesque venenatis libero nulla, nec ultricies tellus eleifend et. Phasellus non mi non orci suscipit viverra. Donec quis eros aliquam, tincidunt quam at, pulvinar dui. Fusce pharetra placerat venenatis. Donec ipsum augue, pharetra eu consectetur luctus, maximus non metus. Fusce pharetra metus nisl, a dignissim libero venenatis ac. Aenean ut accumsan velit. Suspendisse mattis neque elit, eget ultrices enim molestie ac. Nullam rutrum rutrum quam, luctus aliquet odio tristique quis. Nam tristique diam rhoncus massa varius, non elementum enim vulputate. Aliquam iaculis, massa ac placerat convallis, ex mi elementum magna, quis vulputate diam velit eu massa. Sed facilisis gravida eros non luctus. Morbi ultrices massa augue, in aliquam eros tincidunt non. Vestibulum vel elementum dolor.</string>

    <string name="message_top_stories">Top Stories</string>
    <string name="message_sticky_post">Sticky Post</string>

    <string name="message_no_posts">That\'s weird. We have no posts to show.</string>

    <string name="message_retry">Retry</string>

    <string name="txt_by">By</string>

    <string name="message_app_setup">Setting things up for you…</string>
    <string name="message_app_setup_almost_done">Almost Done…</string>

    <string name="error_global">Opps! Something went wrong.\n Try again later?</string>
    <string name="error_network">Opps! Something is wrong with your network.\n Check your network.</string>
    <string name="message_visit_site">Visit Website</string>
    <string name="menu_open_in_browser">Open In Browser</string>
</resources>
