<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_main"
        android:orderInCategory="1"
        android:checkableBehavior="single"
    >
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:id="@+id/nav_committee"
            android:title="@string/nav_committee"
            android:icon="@drawable/ic_people_black_24dp"
            android:orderInCategory="3"
            />
        <item
            android:id="@+id/nav_downloads"
            android:title="@string/nav_downloads"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:orderInCategory="4"
            />
    </group>

    <group
        android:id="@+id/menu_group_settings"
        android:orderInCategory="5"
        android:checkableBehavior="single"
    >
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:title="@string/nav_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
        <!--/>-->
        <!--<item-->
            <!--android:id="@+id/nav_feedback"-->
            <!--android:title="@string/nav_feedback"-->
            <!--android:icon="@drawable/ic_feedback_black_24dp"-->
        <!--/>-->
        <item
            android:id="@+id/nav_developer"
            android:title="@string/nav_developer"
            android:icon="@drawable/ic_code_black_24dp"
        />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_first_page_black_24dp"
        />
    </group>

</menu>
