<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_darkest"
    tools:context=".auth.LoginActivity">

    <SurfaceView
        android:id="@+id/qrCameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/loginPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:textColor="@color/white"
            android:text="@string/message_login_prompt"
            android:drawableLeft="@drawable/ic_scanner_white_24dp"
            android:drawableStart="@drawable/ic_scanner_white_24dp"
            android:gravity="center_horizontal|bottom"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black_trans_30"
            android:weightSum="2"
            >
            <Button
                android:id="@+id/toggleFlashBtn"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_flash_on_white_24dp"
                android:text="@string/btn_text_flash_on"
                style="@style/LoginControlButton"
                />

            <Button
                android:id="@+id/loginAsGuestBtn"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_person_white_24dp"
                android:text="@string/btn_text_login_as_guest"
                style="@style/LoginControlButton"
                />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
