<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/card_width_default"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_small"
        style="@style/PostCardStyle"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            >

            <ImageView
                android:id="@+id/post_featured_image"
                android:layout_width="@dimen/card_image_width_default"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image_white_24dp"
                android:background="@color/midnight_blue"
                android:scaleType="center"
                android:clickable="true"
                />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@id/post_featured_image"
                android:padding="@dimen/spacing_normal"
                >

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_post_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    />

                <TextView
                    android:id="@+id/post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/post_title"
                    android:layout_alignLeft="@id/post_title"
                    android:layout_alignStart="@id/post_title"
                    android:text="@string/placeholder_post_date"
                    />

                <TextView
                    android:id="@+id/post_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/post_date"
                    android:layout_toEndOf="@id/post_date"
                    android:layout_alignBaseline="@id/post_date"
                    android:text="@string/placeholder_post_author"
                    />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>