<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    >
        <ImageView
            android:id="@+id/post_featured_image"
            android:layout_height="@dimen/avatar_size"
            android:layout_width="@dimen/avatar_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:src="@drawable/ic_image_white_24dp"
            android:background="@drawable/circle_shape"
            android:scaleType="center"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/post_featured_image"
            android:layout_toEndOf="@id/post_featured_image"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            >
            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_post_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_title"
                android:layout_alignLeft="@id/post_title"
                android:layout_alignStart="@id/post_title"
                android:text="@string/placeholder_post_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:id="@+id/post_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/post_date"
                android:layout_toEndOf="@id/post_date"
                android:layout_alignBaseline="@id/post_date"
                android:text="@string/placeholder_post_author"
                />
        </RelativeLayout>
</RelativeLayout>